--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,22 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - projects.qmd
+      - about.qmd
+      - text: "My Interests"
+        href: interest.qmd
+      - text: "My Projects" 
+        menu: 
+        - text: "For Beginners"
+          href: begin.qmd
+        - text: "Latent Class Analysis"
+          href: hyperloop.qmd
+        - text: "Hierarchical Model"
+          href: multilevel.qmd
+        - text: "Bayesian Testing"
+          href: bayes.qmd
+        - text: "Time Series"
+          href: timeseries.qmd
+      - my-home.qmd
     tools:
       - icon: github
         href: https://github.com/0-cal/my-portfolio
@@ -18,7 +33,8 @@ website:
 
 format:
   html:
-    theme: cerulean
+    theme: cosmo
+    css: styles.css
     toc: true
 
 editor: source
