--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,6 +28,7 @@ website:
           href: begin.qmd
         - text: "Building Websites (coming soon)"
         - text: "Building Packages (coming soon)"
+    sidebar: false
     tools:
       - icon: github
         href: https://github.com/0-cal/my-portfolio
