--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,8 +6,8 @@ website:
   title: "My Portfolio"
   navbar:
     left:
-      - href: index.qmd
-        text: Home
+      - text: "Home"
+        href: index.qmd
       - text: "About Me"
         menu: 
           - text: "My Resume"
